--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-title {
+h1 {
     font-size: 30px;
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Verdana, sans-serif;
 }
