--- a/style.css
+++ b/style.css
@@ -1,10 +1,29 @@
+.card {
+    width: 800px;
+    background-color:blanchedalmond;
+    margin: auto;
+    padding: 8px;
+}
+
 .title {
     font-size: 30px;
     font-family: Verdana, sans-serif;
     text-align: center;
+    font-weight: bold;
 }
 
-.links{
+.link-list{
+    list-style-type: none;
     font-size: 24px;
     font-family: Verdana, sans-serif;
+    font-weight: normal;
+    text-align: center;
+}
+
+.link-list li{
+    background-color: lightblue;
+    padding: 16px 8px;
+    width: 400px; 
+    margin-bottom: 8px;
+    transform: translateX(100%);
 }
